# StudySync

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ai_backend.py  changelog.md
.github/workflows/: release.yml
client/: resources.qrc
client/include/: ClientNetworkManager.h  LanguageManager.h  ServerAPI.h  TcpClient.h
client/include/ui/: ClientState.h  MainWindow.h  SyntaxHighlighter.h
client/include/ui/page/: AbstractChatPage.h  AiTutorPage.h  DashboardPage.h  FocusPage.h  GroupChatPage.h  GroupsPage.h  TasksPage.h
client/include/ui/widget/: CreateGroupDialog.h  CreateTaskDialog.h  EditTaskDialog.h  GroupCard.h  LoginWindow.h  ManageMembersDialog.h  NotificationsDialog.h  TaskCard.h
client/resources/: syntax_rules.json  themeStyle.css
client/resources/lang/: ar_sa.json  en_us.json  fr_fr.json
client/src/: ClientNetworkManager.cpp  LanguageManager.cpp  ServerAPI.cpp  TcpClient.cpp  main.cpp
client/src/ui/: ClientState.cpp  MainWindow.cpp  SyntaxHighlighter.cpp
client/src/ui/page/: AbstractChatPage.cpp  AiTutorPage.cpp  DashboardPage.cpp  FocusPage.cpp  GroupChatPage.cpp  GroupsPage.cpp  TasksPage.cpp
client/src/ui/widget/: CreateGroupDialog.cpp  CreateTaskDialog.cpp  EditTaskDialog.cpp  GroupCard.cpp  LoginWindow.cpp  ManageMembersDialog.cpp  NotificationsDialog.cpp  TaskCard.cpp
include/: DataStructures.h
server/: CMakeLists.txt
server/include/: CmdParser.h  Database.h  MessageRouter.h  TcpServer.h
server/src/: CmdParser.cpp  Database.cpp  MessageRouter.cpp  ServerRoutes.cpp  TcpServer.cpp  main.cpp
shared/: CMakeLists.txt
shared/include/: DataStructures.h
shared/src/: DataStructures.cpp  TcpClient.cpp
src/: DataStructures.cpp
tests/: CMakeLists.txt  MockClasses.h  TestDataStructures.cpp  TestMessageRouter.cpp  TestServerRoutes.cpp  test_studysync.cpp
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Downloads.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ScrollReveal.tsx  Showcase.tsx  Terminal.tsx
